[gd_scene load_steps=11 format=3 uid="uid://c8ox33xsueinb"]

[ext_resource type="Script" path="res://main_b.gd" id="1_ehr3d"]
[ext_resource type="Texture2D" uid="uid://cxjhmd6w4ia86" path="res://images/background.png" id="1_s1rdp"]
[ext_resource type="Texture2D" uid="uid://cb2m7i0bcw52s" path="res://atlas/play_button.tres" id="2_12q13"]
[ext_resource type="PackedScene" uid="uid://r68gr6cjklob" path="res://human_metter.tscn" id="3_goxrm"]
[ext_resource type="PackedScene" uid="uid://dme4u5mn0mhta" path="res://tts_toggle.tscn" id="4_313ya"]
[ext_resource type="Texture2D" uid="uid://ce52hsypp12t2" path="res://atlas/compi_bubble_big.tres" id="4_op237"]
[ext_resource type="Theme" uid="uid://c51pm8mamwwde" path="res://themes/main_theme.tres" id="5_wkgrd"]
[ext_resource type="Texture2D" uid="uid://fca4gcycuntq" path="res://images/ui_elements.png" id="6_f0w2s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_goume"]
atlas = ExtResource("6_f0w2s")
region = Rect2(1449, 414, 361, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qsix"]
atlas = ExtResource("6_f0w2s")
region = Rect2(1457, 485, 347, 72)

[node name="MainB" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehr3d")

[node name="Center" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Center"]
texture = ExtResource("1_s1rdp")

[node name="HumanMetter" parent="Center" instance=ExtResource("3_goxrm")]
position = Vector2(0, -934)

[node name="TTS_toggle" parent="Center" instance=ExtResource("4_313ya")]
position = Vector2(1304, -930)

[node name="Control" type="Control" parent="Center"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -1788.0
offset_top = -647.0
offset_right = -708.0
offset_bottom = 927.0
metadata/_edit_use_anchors_ = true

[node name="HumanAnswers" type="Node2D" parent="Center/Control"]
unique_name_in_owner = true
position = Vector2(518, 0)

[node name="PlayButton" type="Sprite2D" parent="Center"]
position = Vector2(-1688, -363)
texture = ExtResource("2_12q13")

[node name="CompiAnswers" type="Node2D" parent="Center"]

[node name="CompiBubble" type="Sprite2D" parent="Center/CompiAnswers"]
position = Vector2(4, -311)
texture = ExtResource("4_op237")

[node name="CompiAnswerLabel" type="Label" parent="Center/CompiAnswers/CompiBubble"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -913.5
offset_top = -449.5
offset_right = -123.5
offset_bottom = -81.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_wkgrd")
text = "How are you feeling today?"
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="Center"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1436.0
offset_top = -752.0
offset_right = -1075.0
offset_bottom = -682.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
texture_under = SubResource("AtlasTexture_goume")
texture_progress = SubResource("AtlasTexture_2qsix")
